--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "notistack": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.3",
